--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learning how to learn</title>
+  <link rel="stylesheet" href=".\styles\normalize.css">
+  <link rel="stylesheet" href=".\styles\style.css">
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+      <div class="header__logo">
+        <img src=".\images\logo_place_header.png" alt="logo_place_header" class="logo_place_header"/>
+      </div>
+      <h1 class="header__title">Learning how to learn</h1>
+      <h2 class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life.
+        <a href="#" class="link header__link">Learn more</a>
+      </h2>
+      <div class="header__main-illustration">
+        <img src=".\images\header-image.png" alt="header-image" class="header__image"/>
+      </div>
+      <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
