--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <h1 class="header__title">Learning how to learn</h1>
       <h2 class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life.
-        <a href="#" class="link header__link">Learn more</a>
+        <a href="#" class="link header__link">Learn more →</a>
       </h2>
       <div class="header__main-illustration">
         <img src=".\images\header-image.png" alt="header image" class="cover-block"/>
@@ -86,7 +86,7 @@
       <section class="feynman">
         <h1 class="feynman__title">The Feynman Technique</h1>
         <h2 class="feynman__subtitle">Learn without forgetting.</h2>
-        <h2><a href="#" class="link feynman__link">More</a></h2>
+        <h2><a href="#" class="link feynman__link">More →</a></h2>
         <div class="feynman__image">
           <img src=".\images\feynman.png" alt="feynman image" class="cover-block"/>
         </div>
@@ -144,11 +144,11 @@
           <div class="logo_place_footer">
             <img src=".\images\logo_place_footer.png" alt="footer logo" class="cover-block"/>
           </div>
-          <div class=footer__author><p>2020. Jessalyn Dowd</p></div>
+          <div class=footer__author><p>&copy; 2020. Jessalyn Dowd</p></div>
         </div>
         <div class="footer__column_content_info">
-          <h1 class="footer__column-heading">About Practicum by Yandex</h1>
-          <ul class="footer__column-links">
+          <h1 class="footer__column-heading">About Practicum by Yandex</h1> 
+          <ul class="footer__column-links link">
             <li>Home page</li>
             <li>concept</li>
             <li>mentors</li>
@@ -156,18 +156,22 @@
         </div>
         <div class="footer__column_content_social">
           <h1 class="footer__column-heading">Social Media</h1>
-          <div>
-            <div class="footer__social-icon">
-              <img src=".\images\facebook_color_white.svg" alt="cover-block"/>
+          <a href="https://web.facebook.com/YPracticum?_rdc=1&_rdr" class="link" target="blank">
+            <div class="social-block">
+              <div class="footer__social-icon">
+                <img src=".\images\facebook_color_white.svg" alt="cover-block"/>
+              </div>
+              <h2 class="footer__column-links link">Facebook</h2>
             </div>
-            <h2 class="footer__column-links">Facebook</h2>
-          </div>
-          <div>
-            <div class="footer__social-icon">
-              <img src=".\images\instagram_color_white.svg" alt="cover-block"/>
+          </a>
+          <a href="https://www.instagram.com/practicum.en/" class="link" target="blank">
+            <div class="social-block">
+              <div class="footer__social-icon">
+                <img src=".\images\instagram_color_white.svg" alt="cover-block"/>
+              </div>
+              <h2 class="footer__column-links link">Instagram</h2>
             </div>
-            <h2 class="footer__column-links">Instagram</h2>
-          </div>
+          </a>
         </div>
       </div>
     </footer>
