--- a/index.html
+++ b/index.html
@@ -93,51 +93,60 @@
       </section>
 
       <section class="kaufman">
-        <h1 class="section-title">Facts and figures</h1>
-        <h3 class="section-subtitle">On learning and the brain</h3>
-        <table class="table">
-          <tr class="table__row">
-            <td class="table__cell">
-              <h3 class="table__heading">86 billion</h3>
-              <p class="table__text">The number of neurons in the human brain</p>
+        <h1 class="section-title_theme_dark">Ten principles of rapid skill acquisition</h1>
+        <h3 class="section-subtitle_theme_dark">by Josh Kaufman</h3>
+        <table class="table_theme_dark">
+          <tr class="table__row_theme_dark">
+            <td class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark">1</h3>
+              <p class="table__text_theme_dark">Choose a lovable project.</p>
             </td>
-            <td class="table__cell">
-              <h3 class="table__heading">2.1 billion</h3>
-              <p class="table__text">The number of adults with low reading proficiency</p>
-              <p class="table__text">World Bank, 2017</p>
+            <td class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark">2</h3>
+              <p class="table__text_theme_dark">Focus your energy on one skill at a time.</p>
             </td>
-            <td class="table__cell">
-              <h3 class="table__heading">81,000 terabytes</h3>
-              <p class="table__text">Human information storage capacity</p>
+            <td class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark">3</h3>
+              <p class="table__text_theme_dark">Define your target performance level.</p>
             </td>
-            <td class="table__cell">
-              <h3 class="table__heading">500 trillion</h3>
-              <p class="table__text">The number of nerve synapses responsible for learning in an adult human</p>
+            <td class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark">4</h3>
+              <p class="table__text_theme_dark">Deconstruct the skill into sub-skills.</p>
             </td>
+            <td class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark">5</h3>
+              <p class="table__text_theme_dark">Obtain critical tools.</p>
+            </td> 
           </tr>
-          <tr class="table__row">
-            <td class="table__cell">
-              <h3 class="table__heading">420 million</h3>
-              <p class="table__text">The number of adults under 25 with insufficient education for finding employment</p>
-              <p class="table__text">World Bank, 2017</p>
+          <tr class="table__row_theme_dark">
+            <td class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark">6</h3>
+              <p class="table__text_theme_dark">Eliminate barriers to practice.</p>
             </td>
-            <td class="table__cell">
-              <h3 class="table__heading">17 - 20 years old</h3>
-              <p class="table__text">Peak learning age</p>
+            <td class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark">7</h3>
+              <p class="table__text_theme_dark">Make dedicated time for practice.</p>
             </td>
-            <td class="table__cell">
-              <h3 class="table__heading">1885</h3>
-              <p class="table__text">Development of the forgetting curve</p>
+            <td class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark">8</h3>
+              <p class="table__text_theme_dark">Create fast feedback loops.</p>
             </td>
-            <td class="table__cell">
-              <h3 class="table__heading">1897</h3>
-              <p class="table__text">Publication of Ivan Pavlov's research on classical conditioning</p>
+            <td class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark">9</h3>
+              <p class="table__text_theme_dark">Practice by the clock in short bursts.</p>
+            </td>
+            <td class="table__cell_theme_dark">
+              <h3 class="table__heading_theme_dark">10</h3>
+              <p class="table__text_theme_dark">Emphasize quantity and speed.</p>
             </td>
           </tr>
         </table>
+        <div class="kaufman__triangle">
+          <img src=".\images\kaufman-triangle.svg" alt="kaufman triangle" class="cover-block"/>
+        </div>
       </section>
-    
     </main>
+    
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column_content_copyright">
