--- a/index.html
+++ b/index.html
@@ -4,24 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learning how to learn</title>
-  <link rel="stylesheet" href=".\styles\normalize.css">
-  <link rel="stylesheet" href=".\styles\style.css">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
   
   <div class="page">
     
     <header class="header">
-      <div class="logo logo_place_header">
-        <img src=".\images\logo_place_header.png" alt="header logo" class="cover-block"/>
-      </div>
+      <img src="images/logo_place_header.png" alt="header logo" class="logo logo_place_header"/>
       <h1 class="header__title">Learning how to learn</h1>
-      <h2 class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life.
-        <a href="#" class="link header__link">Learn more →</a>
-      </h2>
-      <div class="header__main-illustration">
-        <img src=".\images\header-image.png" alt="header image" class="cover-block"/>
-      </div>
+      <p class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life.
+        <a href="#" class="header__link">Learn more →</a>
+      </p>
+      <img src="images/header-image.png" alt="header image" class="header__main-illustration"/>
       <div class="header__square-pic"></div>
     </header>
     
@@ -88,7 +84,7 @@
         <h2 class="feynman__subtitle">Learn without forgetting.</h2>
         <h2><a href="#" class="link feynman__link">More →</a></h2>
         <div class="feynman__image">
-          <img src=".\images\feynman.png" alt="feynman image" class="cover-block"/>
+          <img src="images/feynman.png" alt="feynman image" class="cover-block"/>
         </div>
       </section>
 
@@ -142,7 +138,7 @@
           </tr>
         </table>
         <div class="kaufman__triangle">
-          <img src=".\images\kaufman-triangle.svg" alt="kaufman triangle" class="cover-block"/>
+          <img src="images/kaufman-triangle.svg" alt="kaufman triangle" class="cover-block"/>
         </div>
       </section>
     </main>
@@ -151,7 +147,7 @@
       <div class="footer__columns">
         <div class="footer__column_content_copyright">
           <div class="logo_place_footer">
-            <img src=".\images\logo_place_footer.png" alt="footer logo" class="cover-block"/>
+            <img src="images/logo_place_footer.png" alt="footer logo" class="cover-block"/>
           </div>
           <div class=footer__author><p>&copy; 2020. Jessalyn Dowd</p></div>
         </div>
@@ -168,7 +164,7 @@
           <a href="https://web.facebook.com/YPracticum?_rdc=1&_rdr" class="link" target="blank">
             <div class="social-block">
               <div class="footer__social-icon">
-                <img src=".\images\facebook_color_white.svg" alt="cover-block"/>
+                <img src="images/facebook_color_white.svg" alt="cover-block"/>
               </div>
               <h2 class="footer__column-links link">Facebook</h2>
             </div>
@@ -176,7 +172,7 @@
           <a href="https://www.instagram.com/practicum.en/" class="link" target="blank">
             <div class="social-block">
               <div class="footer__social-icon">
-                <img src=".\images\instagram_color_white.svg" alt="cover-block"/>
+                <img src="images/instagram_color_white.svg" alt="cover-block"/>
               </div>
               <h2 class="footer__column-links link">Instagram</h2>
             </div>
