--- a/index.html
+++ b/index.html
@@ -37,46 +37,42 @@
       <section class="digits">
         <h2 class="section-title">Facts and figures</h2>
         <p class="section-subtitle">On learning and the brain</p>
-        <table class="table">
-          <tr class="table__row">
-            <td class="table__cell">
-              <h3 class="table__heading">86 billion</h3>
-              <p class="table__text">The number of neurons in the human brain</p>
-            </td>
-            <td class="table__cell">
-              <h3 class="table__heading">2.1 billion</h3>
-              <p class="table__text">The number of adults with low reading proficiency</p>
-              <p class="table__text">World Bank, 2017</p>
-            </td>
-            <td class="table__cell">
-              <h3 class="table__heading">81,000 terabytes</h3>
-              <p class="table__text">Human information storage capacity</p>
-            </td>
-            <td class="table__cell">
-              <h3 class="table__heading">500 trillion</h3>
-              <p class="table__text">The number of nerve synapses responsible for learning in an adult human</p>
-            </td>
-          </tr>
-          <tr class="table__row">
-            <td class="table__cell">
-              <h3 class="table__heading">420 million</h3>
-              <p class="table__text">The number of adults under 25 with insufficient education for finding employment</p>
-              <p class="table__text">World Bank, 2017</p>
-            </td>
-            <td class="table__cell">
-              <h3 class="table__heading">17 - 20 years old</h3>
-              <p class="table__text">Peak learning age</p>
-            </td>
-            <td class="table__cell">
-              <h3 class="table__heading">1885</h3>
-              <p class="table__text">Development of the forgetting curve</p>
-            </td>
-            <td class="table__cell">
-              <h3 class="table__heading">1897</h3>
-              <p class="table__text">Publication of Ivan Pavlov's research on classical conditioning</p>
-            </td>
-          </tr>
-        </table>
+        <ul class="table">
+          <li class="table__cell">
+            <p class="table__heading">86 billion</p>
+            <p class="table__text">The number of neurons in the human brain</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">2.1 billion</p>
+            <p class="table__text">The number of adults with low reading proficiency</p>
+            <p class="table__text">World Bank, 2017</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">81,000 terabytes</p>
+            <p class="table__text">Human information storage capacity</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">500 trillion</p>
+            <p class="table__text">The number of nerve synapses responsible for learning in an adult human</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">420 million</p>
+            <p class="table__text">The number of adults under 25 with insufficient education for finding employment</p>
+            <p class="table__text">World Bank, 2017</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">17 - 20 years old</p>
+            <p class="table__text">Peak learning age</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">1885</p>
+            <p class="table__text">Development of the forgetting curve</p>
+          </li>
+          <li class="table__cell">
+            <p class="table__heading">1897</p>
+            <p class="table__text">Publication of Ivan Pavlov's research on classical conditioning</p>
+          </li>
+        </ul>
       </section>
       
       <section class="feynman">
