--- a/index.html
+++ b/index.html
@@ -83,58 +83,53 @@
       </section>
 
       <section class="kaufman">
-        <h2 class="section-title_theme_dark">Ten principles of rapid skill acquisition</h2>
-        <p class="section-subtitle_theme_dark">by Josh Kaufman</p>
-        <table class="table_theme_dark">
-          <tr class="table__row_theme_dark">
-            <td class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark">1</h3>
-              <p class="table__text_theme_dark">Choose a lovable project.</p>
-            </td>
-            <td class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark">2</h3>
-              <p class="table__text_theme_dark">Focus your energy on one skill at a time.</p>
-            </td>
-            <td class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark">3</h3>
-              <p class="table__text_theme_dark">Define your target performance level.</p>
-            </td>
-            <td class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark">4</h3>
-              <p class="table__text_theme_dark">Deconstruct the skill into sub-skills.</p>
-            </td>
-            <td class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark">5</h3>
-              <p class="table__text_theme_dark">Obtain critical tools.</p>
-            </td> 
-          </tr>
-          <tr class="table__row_theme_dark">
-            <td class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark">6</h3>
-              <p class="table__text_theme_dark">Eliminate barriers to practice.</p>
-            </td>
-            <td class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark">7</h3>
-              <p class="table__text_theme_dark">Make dedicated time for practice.</p>
-            </td>
-            <td class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark">8</h3>
-              <p class="table__text_theme_dark">Create fast feedback loops.</p>
-            </td>
-            <td class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark">9</h3>
-              <p class="table__text_theme_dark">Practice by the clock in short bursts.</p>
-            </td>
-            <td class="table__cell_theme_dark">
-              <h3 class="table__heading_theme_dark">10</h3>
-              <p class="table__text_theme_dark">Emphasize quantity and speed.</p>
-            </td>
-          </tr>
-        </table>
-        <div class="kaufman__triangle">
-          <img src="images/kaufman-triangle.svg" alt="kaufman triangle" class="cover-block"/>
-        </div>
+        <h2 class="section-title section-title_theme_dark">Ten principles of rapid skill acquisition</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">by Josh Kaufman</p>
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">1</p>
+            <p class="table__text table__text_theme_dark">Choose a lovable project.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">2</p>
+            <p class="table__text table__text_theme_dark">Focus your energy on one skill at a time.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">3</p>
+            <p class="table__text table__text_theme_dark">Define your target performance level.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">4</p>
+            <p class="table__text table__text_theme_dark">Deconstruct the skill into sub-skills.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">5</p>
+            <p class="table__text table__text_theme_dark">Obtain critical tools.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">6</p>
+            <p class="table__text table__text_theme_dark">Eliminate barriers to practice.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">7</p>
+            <p class="table__text table__text_theme_dark">Make dedicated time for practice.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">8</p>
+            <p class="table__text table__text_theme_dark">Create fast feedback loops.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">9</p>
+            <p class="table__text table__text_theme_dark">Practice by the clock in short bursts.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <p class="table__heading table__heading_theme_dark">10</p>
+            <p class="table__text table__text_theme_dark">Emphasize quantity and speed.</p>
+          </li>
+        </ul>
+        <div class="kaufman__triangle"></div>
       </section>
+      
     </main>
     
     <footer class="footer">
