--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learning how to learn</title>
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="vendor/normalize.css">
+  <link rel="stylesheet" href="blocks/root/root.css">
+  <link rel="stylesheet" href="blocks/header/header.css">
+  <link rel="stylesheet" href="blocks/logo/logo.css">
+  <link rel="stylesheet" href="blocks/two-columns/two-columns.css">
+  <link rel="stylesheet" href="blocks/description/description.css">
+  <link rel="stylesheet" href="blocks/digits/digits.css">
+  <link rel="stylesheet" href="blocks/section-title/section-title.css">
+  <link rel="stylesheet" href="blocks/section-subtitle/section-subtitle.css">
+  <link rel="stylesheet" href="blocks/table/table.css">
+  <link rel="stylesheet" href="blocks/feynman/feynman.css">
+  <link rel="stylesheet" href="blocks/kaufman/kaufman.css">
+  <link rel="stylesheet" href="blocks/footer/footer.css">
 </head>
 
 <body>
   
-  <div class="page">
+  <div class="root">
     
     <header class="header">
       <img src="images/logo_place_header.png" alt="header logo" class="logo logo_place_header"/>
