--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="blocks/rotation/rotation.css">
   <link rel="stylesheet" href="blocks/techniques/techniques.css">
   <link rel="stylesheet" href="blocks/cards/cards.css">
+  <link rel="stylesheet" href="blocks/oakley/oakley.css">
+  <link rel="stylesheet" href="blocks/video/video.css">
 </head>
 
 <body>
@@ -54,7 +56,6 @@
         <p class="section-subtitle">Five Strategies from Barbara Oakley</p>
 
         <div class="cards">
-
           <div class="cards__item">
             <img src="images_sprint-2/cards-attention.png" alt="cards image" class="cards__image"/>
             <p class="cards__title">Two Ways of Thinking </p>
@@ -88,9 +89,41 @@
         </div>
       </section>
 
-      <section class="video"></section>
+      <section class="video">
+        <h2 class="section-title">TED talks</h2>
+        <p class="section-subtitle">For lovers of procrastination</p>
+        <div class="video__iframes">
+          <div class="video__iframe">
+            <iframe src="https://www.youtube.com/watch?v=5MgBikgcWnY" width="515px" height="316px" style="border:none;overflow:visible" scrolling="no" allowtransparency="" allow=""></iframe> 
+          </div>
+          <div class="video__iframe">
+            <iframe src="https://www.youtube.com/watch?v=arj7oStGLkU" width="515px" height="316px" style="border:none;overflow:visible" scrolling="no" allowtransparency="" allow=""></iframe>
+          </div>
+        </div>
+      </section>
 
-      <section class="oakley"></section>
+      <section class="oakley">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">Barbara Oakley’s story.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Math didn't come naturally to Barbara in childhood. She thought of herself as more of a 
+              humanities person, and not a brilliant one at that. With an eye to becoming a linguist, after 
+              school she enlisted in the army, who sent her to learn Russian. After several years of service, 
+              during which she rose to the rank of Captain, Barbara left the army and decided to study 
+              engineering. In was during this time that she developed her learning methodology as she was 
+              forced to reprogram her brain for a different kind of learning. It turns out that when something 
+              doesn't come naturally to you, having to work hard to gain the knowledge that other people 
+              may get at first glance gives you a deeper, more comprehensive understanding of the subject matter.</p>
+          </div>
+        </article>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">The Feynman Technique</h2>
+        <p class="feynman__subtitle">Learn without forgetting.</p>
+        <a href="#" class="feynman__link">More →</a>
+        <img src="images/feynman.png" alt="feynman image" class="feynman__image"/>
+      </section>
         
       <section class="digits">
         <h2 class="section-title">Facts and figures</h2>
@@ -133,13 +166,6 @@
         </ul>
       </section>
       
-      <section class="feynman">
-        <h2 class="feynman__title">The Feynman Technique</h2>
-        <p class="feynman__subtitle">Learn without forgetting.</p>
-        <a href="#" class="feynman__link">More →</a>
-        <img src="images/feynman.png" alt="feynman image" class="feynman__image"/>
-      </section>
-
       <section class="khan"></section>
 
       <section class="kaufman">
