project 2 ready for submission -2

--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
         <p class="section-subtitle">For lovers of procrastination</p>
         <div class="video__iframes">
           <div class="video__iframe">
-            <iframe src="https://www.youtube.com/watch?v=5MgBikgcWnY" width="515" height="316" style="border:none;overflow:visible"></iframe> 
+            <iframe src="https://www.youtube.com/watch?v=5MgBikgcWnY" width="515" height="316" style="border:none; overflow:visible; "></iframe> 
           </div>
           <div class="video__iframe">
-            <iframe src="https://www.youtube.com/watch?v=arj7oStGLkU" width="515" height="316" style="border:none;overflow:visible"></iframe>
+            <iframe src="https://www.youtube.com/watch?v=arj7oStGLkU" width="515" height="316" style="border:none; overflow:visible; "></iframe>
           </div>
         </div>
       </section>
