project 2 ready for submission -4

--- a/index.html
+++ b/index.html
@@ -4,26 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learning how to learn</title>
-  <link rel="stylesheet" href="vendor/normalize.css">
-  <link rel="stylesheet" href="blocks/root/root.css">
-  <link rel="stylesheet" href="blocks/header/header.css">
-  <link rel="stylesheet" href="blocks/logo/logo.css">
-  <link rel="stylesheet" href="blocks/two-columns/two-columns.css">
-  <link rel="stylesheet" href="blocks/description/description.css">
-  <link rel="stylesheet" href="blocks/digits/digits.css">
-  <link rel="stylesheet" href="blocks/section-title/section-title.css">
-  <link rel="stylesheet" href="blocks/section-subtitle/section-subtitle.css">
-  <link rel="stylesheet" href="blocks/table/table.css">
-  <link rel="stylesheet" href="blocks/feynman/feynman.css">
-  <link rel="stylesheet" href="blocks/kaufman/kaufman.css">
-  <link rel="stylesheet" href="blocks/footer/footer.css">
-  <link rel="stylesheet" href="blocks/rotation/rotation.css">
-  <link rel="stylesheet" href="blocks/techniques/techniques.css">
-  <link rel="stylesheet" href="blocks/cards/cards.css">
-  <link rel="stylesheet" href="blocks/oakley/oakley.css">
-  <link rel="stylesheet" href="blocks/video/video.css">
-  <link rel="stylesheet" href="blocks/khan/khan.css">
-  <link rel="stylesheet" href="blocks/resources/resources.css">
+  <link rel="stylesheet" href="pages/index.css">
 </head>
 
 <body>
@@ -96,10 +77,10 @@
         <p class="section-subtitle">For lovers of procrastination</p>
         <div class="video__iframes">
           <div class="video__iframe">
-            <iframe src="https://www.youtube.com/watch?v=5MgBikgcWnY" width="515" height="316" style="border:none; overflow:visible; "></iframe> 
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
           </div>
           <div class="video__iframe">
-            <iframe src="https://www.youtube.com/watch?v=arj7oStGLkU" width="515" height="316" style="border:none; overflow:visible; "></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
       </section>
